# bvh-builder

backend/: CMakeLists.txt  aabb.cpp  aabb.h  bvh.cpp  bvh.h  divider.cpp  divider.h  fifo.cpp  fifo.h  linkage.cpp  linkage.h  main.cpp  matrix3x3.cpp  matrix3x3.h  mesh.cpp  mesh.h  polygonizer.cpp  quadrangular.cpp  quadrangular.h  tcp-server.cpp  tcp-server.h  triangular.cpp  triangular.h
frontend/: load-wavefront-obj.py  shutdown.py  test.py
